--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,9 @@
 <h1> <%= title %> </h1>
   <body>
-    <% messages.forEach((message) => { %>
+    <% messages.forEach((message, index) => { %>
       <p> <%= message.user %> <br> <%= message.added %> <br> <%= message.text %> </p>
-      <
+      <a href = "/message/<%= index %>"> Expand Message </a>
     <% }) %>
   </body>
+  <br> <br> <br>
 <a href = "/new"> Post a message </a>
